Improvements into the html file, fire card selection, poketype colour mapping, ...

--- a/poketeam.html
+++ b/poketeam.html
@@ -3,78 +3,81 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<style>
-		body{background-image:url(https://wallpaperplay.com/walls/full/8/6/a/136816.jpg);}
+		body{background-image:url(https://wallpaperplay.com/walls/full/8/6/a/136816.jpg);background-size:cover;background-repeat:no-repeat;}
 		.container{min-height:100%;padding:1em;background:rgba(255,255,255,0.75);}
+		.card:hover{box-shadow: 0px 0px 13px 0px #f71616;border: 3px #984141 solid;}
+		h1 { color: #CFF0D4; font-family: 'Rouge Script', cursive; font-size: 130px; font-weight: normal; line-height: 48px; margin: 0 0 50px; text-align: center; text-shadow: 1px 1px 2px #082b34; }
 	</style>
 </head>
 
 <body>
 	<div class="container">
+		<center>
 		<div class="row">
-			<div class="col-md-12 text-center pt-4 pb-4">
-				<h1>This is our team</h1>
-				<h2 class="h4">Some after text</h2>
+			<div class="col-md-12 text-center pt-3 pb-3">
+				<h1>Poke Team</h1>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
-				  <img src="https://img.pokemondb.net/sprites/ultra-sun-ultra-moon/small/pikipek.jpg" class="card-img-top" alt="Pokemon 1">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/probopass.png" class="card-img-top" alt="Pokemon 1">
 				  <div class="card-body">
-				  	<p class="card-text">#731</p>
-				    <h5 class="card-title">Pikipek</h5>
-				    <p class="card-text">Normal · Flying</p>
+				  	<h6 class="card-text">#476</h6>
+				    <h5 class="card-title"><font color="blue">Probopass</font></h5>
+				    <h5 class="card-text"><font color="B6A136">Rock</font>  ·  <font color="B7B7CE">Steel</font></h5>
 				  </div>
 				</div>
-			</div><div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/smoochum.png" class="card-img-top" alt="Pokemon 2">
+			</div><div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/jellicent.png" class="card-img-top" alt="Pokemon 2">
 				  <div class="card-body">
-				  	<p class="card-text">#238</p>
-				    <h5 class="card-title">Smoochum</h5>
-				    <p class="card-text">Ice · Psychic</p>
-				  </div>
-				</div>
-			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/solrock.png" class="card-img-top" alt="Pokemon 3">
-				  <div class="card-body">
-				  	<p class="card-text">#338</p>
-				    <h5 class="card-title">Solrock</h5>
-				    <p class="card-text">Rock · Psychic</p>
+				  	<h6 class="card-text">#593</h6>
+				    <h5 class="card-title"><font color="blue">Jellicent</font></h5>
+				    <h5 class="card-text"><font color="6390F0">Water</font>  ·  <font color="735797">Ghost</font></h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
-				  <img src="https://img.pokemondb.net/sprites/ultra-sun-ultra-moon/small/blacephalon.jpg" class="card-img-top" alt="Pokemon 4">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/sableye.png" class="card-img-top" alt="Pokemon 3">
 				  <div class="card-body">
-				  	<p class="card-text">#806</p>
-				    <h5 class="card-title">Blacephalon</h5>
-				    <p class="card-text">Fire · Ghost</p>
+				  	<h6 class="card-text">#302</h6>
+				    <h5 class="card-title"><font color="blue">Sableye</font></h5>
+				    <h5 class="card-text"><font color="705746">Dark</font>  ·  <font color="735797">Ghost</font></h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/azurill.png" class="card-img-top" alt="Pokemon 5">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/venomoth.png" class="card-img-top" alt="Pokemon 4">
 				  <div class="card-body">
-				  	<p class="card-text">#298</p>
-				    <h5 class="card-title">Azurill</h5>
-				    <p class="card-text">Normal · Fairy</p>
+				  	<h6 class="card-text">#049</h6>
+				    <h5 class="card-title"><font color="blue">Venomoth</font></h5>
+				    <h5 class="card-text"><font color="A6B91A">Bug</font>  ·  <font color="A33EA1">Poison</font></h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/golbat.png" class="card-img-top" alt="Pokemon 6">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/drapion.png" class="card-img-top" alt="Pokemon 5">
 				  <div class="card-body">
-				  	<p class="card-text">#042</p>
-				    <h5 class="card-title">Golbat</h5>
-				    <p class="card-text">Poison · Flying</p>
+				  	<h6 class="card-text">#452</h6>
+				    <h5 class="card-title"><font color="blue">Drapion</font></h5>
+				    <h5 class="card-text"><font color="A33EA1">Poison</font>  ·  <font color="705746">Dark</font></h5>
+				  </div>
+				</div>
+			</div>
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/honedge.png" class="card-img-top" alt="Pokemon 6">
+				  <div class="card-body">
+				  	<h6 class="card-text">#679</h6>
+				    <h5 class="card-title"><font color="blue">Honedge</font></h5>
+				    <h5 class="card-text"><font color="B7B7CE">Steel</font>  ·  <font color="735797">Ghost</font></h5>
 				  </div>
 				</div>
 			</div>
 		</div>
+	</center>
 	</div>
 </body>
 
