--- a/template.html
+++ b/template.html
@@ -3,78 +3,81 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<style>
-		body{background-image:url(https://wallpaperplay.com/walls/full/8/6/a/136816.jpg);}
+		body{background-image:url(https://wallpaperplay.com/walls/full/8/6/a/136816.jpg);background-size:cover;background-repeat:no-repeat;}
 		.container{min-height:100%;padding:1em;background:rgba(255,255,255,0.75);}
+		.card:hover{box-shadow: 0px 0px 13px 0px #f71616;border: 3px #984141 solid;}
+		h1 { color: #CFF0D4; font-family: 'Rouge Script', cursive; font-size: 130px; font-weight: normal; line-height: 48px; margin: 0 0 50px; text-align: center; text-shadow: 1px 1px 2px #082b34; }
 	</style>
 </head>
 
 <body>
 	<div class="container">
+		<center>
 		<div class="row">
-			<div class="col-md-12 text-center pt-4 pb-4">
-				<h1>This is our team</h1>
-				<h2 class="h4">Some after text</h2>
+			<div class="col-md-12 text-center pt-3 pb-3">
+				<h1>Poke Team</h1>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
 				  <img src="%%image1%%" class="card-img-top" alt="Pokemon 1">
 				  <div class="card-body">
-				  	<p class="card-text">%%pokeid1%%</p>
-				    <h5 class="card-title">%%pokemon1%%</h5>
-				    <p class="card-text">%%types1%%</p>
+				  	<h6 class="card-text">%%pokeid1%%</h6>
+				    <h5 class="card-title"><font color="blue">%%pokemon1%%</font></h5>
+				    <h5 class="card-text">%%types1%%</h5>
 				  </div>
 				</div>
-			</div><div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
+			</div><div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
 				  <img src="%%image2%%" class="card-img-top" alt="Pokemon 2">
 				  <div class="card-body">
-				  	<p class="card-text">%%pokeid2%%</p>
-				    <h5 class="card-title">%%pokemon2%%</h5>
-				    <p class="card-text">%%types2%%</p>
+				  	<h6 class="card-text">%%pokeid2%%</h6>
+				    <h5 class="card-title"><font color="blue">%%pokemon2%%</font></h5>
+				    <h5 class="card-text">%%types2%%</h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
 				  <img src="%%image3%%" class="card-img-top" alt="Pokemon 3">
 				  <div class="card-body">
-				  	<p class="card-text">%%pokeid3%%</p>
-				    <h5 class="card-title">%%pokemon3%%</h5>
-				    <p class="card-text">%%types3%%</p>
+				  	<h6 class="card-text">%%pokeid3%%</h6>
+				    <h5 class="card-title"><font color="blue">%%pokemon3%%</font></h5>
+				    <h5 class="card-text">%%types3%%</h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
 				  <img src="%%image4%%" class="card-img-top" alt="Pokemon 4">
 				  <div class="card-body">
-				  	<p class="card-text">%%pokeid4%%</p>
-				    <h5 class="card-title">%%pokemon4%%</h5>
-				    <p class="card-text">%%types4%%</p>
+				  	<h6 class="card-text">%%pokeid4%%</h6>
+				    <h5 class="card-title"><font color="blue">%%pokemon4%%</font></h5>
+				    <h5 class="card-text">%%types4%%</h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
 				  <img src="%%image5%%" class="card-img-top" alt="Pokemon 5">
 				  <div class="card-body">
-				  	<p class="card-text">%%pokeid5%%</p>
-				    <h5 class="card-title">%%pokemon5%%</h5>
-				    <p class="card-text">%%types5%%</p>
+				  	<h6 class="card-text">%%pokeid5%%</h6>
+				    <h5 class="card-title"><font color="blue">%%pokemon5%%</font></h5>
+				    <h5 class="card-text">%%types5%%</h5>
 				  </div>
 				</div>
 			</div>
-			<div class="col-xl-3 col-lg-4 col-md-6 col-12">
-				<div class="card" style="width: 100%;">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
 				  <img src="%%image6%%" class="card-img-top" alt="Pokemon 6">
 				  <div class="card-body">
-				  	<p class="card-text">%%pokeid6%%</p>
-				    <h5 class="card-title">%%pokemon6%%</h5>
-				    <p class="card-text">%%types6%%</p>
+				  	<h6 class="card-text">%%pokeid6%%</h6>
+				    <h5 class="card-title"><font color="blue">%%pokemon6%%</font></h5>
+				    <h5 class="card-text">%%types6%%</h5>
 				  </div>
 				</div>
 			</div>
 		</div>
+	</center>
 	</div>
 </body>
 
