--- a/poketeam.html
+++ b/poketeam.html
@@ -19,60 +19,60 @@
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/probopass.png" class="card-img-top" alt="Pokemon 1">
+				  <img src="https://img.pokemondb.net/sprites/ultra-sun-ultra-moon/small/toucannon.jpg" class="card-img-top" alt="Pokemon 1">
 				  <div class="card-body">
-				  	<h6 class="card-text">#476</h6>
-				    <h5 class="card-title"><font color="blue">Probopass</font></h5>
-				    <h5 class="card-text"><font color="B6A136">Rock</font>  ·  <font color="B7B7CE">Steel</font></h5>
+				  	<h6 class="card-text">#733</h6>
+				    <h5 class="card-title"><font color="blue">Toucannon</font></h5>
+				    <h5 class="card-text"><font color="A8A77A">Normal</font>  ·  <font color="A98FF3">Flying</font></h5>
 				  </div>
 				</div>
 			</div><div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/jellicent.png" class="card-img-top" alt="Pokemon 2">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/lampent.png" class="card-img-top" alt="Pokemon 2">
 				  <div class="card-body">
-				  	<h6 class="card-text">#593</h6>
-				    <h5 class="card-title"><font color="blue">Jellicent</font></h5>
-				    <h5 class="card-text"><font color="6390F0">Water</font>  ·  <font color="735797">Ghost</font></h5>
+				  	<h6 class="card-text">#608</h6>
+				    <h5 class="card-title"><font color="blue">Lampent</font></h5>
+				    <h5 class="card-text"><font color="735797">Ghost</font>  ·  <font color="EE8130">Fire</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/sableye.png" class="card-img-top" alt="Pokemon 3">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/bisharp.png" class="card-img-top" alt="Pokemon 3">
 				  <div class="card-body">
-				  	<h6 class="card-text">#302</h6>
-				    <h5 class="card-title"><font color="blue">Sableye</font></h5>
-				    <h5 class="card-text"><font color="705746">Dark</font>  ·  <font color="735797">Ghost</font></h5>
+				  	<h6 class="card-text">#625</h6>
+				    <h5 class="card-title"><font color="blue">Bisharp</font></h5>
+				    <h5 class="card-text"><font color="705746">Dark</font>  ·  <font color="B7B7CE">Steel</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/venomoth.png" class="card-img-top" alt="Pokemon 4">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/baltoy.png" class="card-img-top" alt="Pokemon 4">
 				  <div class="card-body">
-				  	<h6 class="card-text">#049</h6>
-				    <h5 class="card-title"><font color="blue">Venomoth</font></h5>
-				    <h5 class="card-text"><font color="A6B91A">Bug</font>  ·  <font color="A33EA1">Poison</font></h5>
+				  	<h6 class="card-text">#343</h6>
+				    <h5 class="card-title"><font color="blue">Baltoy</font></h5>
+				    <h5 class="card-text"><font color="E2BF65">Ground</font>  ·  <font color="F95587">Psychic</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/drapion.png" class="card-img-top" alt="Pokemon 5">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/igglybuff.png" class="card-img-top" alt="Pokemon 5">
 				  <div class="card-body">
-				  	<h6 class="card-text">#452</h6>
-				    <h5 class="card-title"><font color="blue">Drapion</font></h5>
+				  	<h6 class="card-text">#174</h6>
+				    <h5 class="card-title"><font color="blue">Igglybuff</font></h5>
+				    <h5 class="card-text"><font color="A8A77A">Normal</font>  ·  <font color="D685AD">Fairy</font></h5>
+				  </div>
+				</div>
+			</div>
+			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
+				<div class="card" style="width: 80%;">
+				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/skuntank.png" class="card-img-top" alt="Pokemon 6">
+				  <div class="card-body">
+				  	<h6 class="card-text">#435</h6>
+				    <h5 class="card-title"><font color="blue">Skuntank</font></h5>
 				    <h5 class="card-text"><font color="A33EA1">Poison</font>  ·  <font color="705746">Dark</font></h5>
-				  </div>
-				</div>
-			</div>
-			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
-				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/honedge.png" class="card-img-top" alt="Pokemon 6">
-				  <div class="card-body">
-				  	<h6 class="card-text">#679</h6>
-				    <h5 class="card-title"><font color="blue">Honedge</font></h5>
-				    <h5 class="card-text"><font color="B7B7CE">Steel</font>  ·  <font color="735797">Ghost</font></h5>
 				  </div>
 				</div>
 			</div>
