--- a/poketeam.html
+++ b/poketeam.html
@@ -19,60 +19,60 @@
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/shedinja.png" class="card-img-top" alt="Pokemon 1">
+				  <img src="https://img.pokemondb.net/sprites/bank/normal/ledian.png" class="card-img-top" alt="Pokemon 1">
 				  <div class="card-body">
-				  	<h6 class="card-text">#292</h6>
-				    <h5 class="card-title"><font color="blue">Shedinja</font></h5>
-				    <h5 class="card-text"><font color="A6B91A">Bug</font>  ·  <font color="735797">Ghost</font></h5>
+				  	<h6 class="card-text">#166</h6>
+				    <h5 class="card-title"><font color="blue">Ledian</font></h5>
+				    <h5 class="card-text"><font color="A6B91A">Bug</font>  ·  <font color="A98FF3">Flying</font></h5>
 				  </div>
 				</div>
 			</div><div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/murkrow.png" class="card-img-top" alt="Pokemon 2">
+				  <img src="https://img.pokemondb.net/sprites/bank/normal/crustle.png" class="card-img-top" alt="Pokemon 2">
 				  <div class="card-body">
-				  	<h6 class="card-text">#198</h6>
-				    <h5 class="card-title"><font color="blue">Murkrow</font></h5>
-				    <h5 class="card-text"><font color="705746">Dark</font>  ·  <font color="A98FF3">Flying</font></h5>
+				  	<h6 class="card-text">#558</h6>
+				    <h5 class="card-title"><font color="blue">Crustle</font></h5>
+				    <h5 class="card-text"><font color="A6B91A">Bug</font>  ·  <font color="B6A136">Rock</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/walrein.png" class="card-img-top" alt="Pokemon 3">
+				  <img src="https://img.pokemondb.net/sprites/bank/normal/gloom.png" class="card-img-top" alt="Pokemon 3">
 				  <div class="card-body">
-				  	<h6 class="card-text">#365</h6>
-				    <h5 class="card-title"><font color="blue">Walrein</font></h5>
-				    <h5 class="card-text"><font color="96D9D6">Ice</font>  ·  <font color="6390F0">Water</font></h5>
+				  	<h6 class="card-text">#044</h6>
+				    <h5 class="card-title"><font color="blue">Gloom</font></h5>
+				    <h5 class="card-text"><font color="7AC74C">Grass</font>  ·  <font color="A33EA1">Poison</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/ultra-sun-ultra-moon/small/stakataka.jpg" class="card-img-top" alt="Pokemon 4">
+				  <img src="https://img.pokemondb.net/sprites/bank/normal/latias.png" class="card-img-top" alt="Pokemon 4">
 				  <div class="card-body">
-				  	<h6 class="card-text">#805</h6>
-				    <h5 class="card-title"><font color="blue">Stakataka</font></h5>
-				    <h5 class="card-text"><font color="B6A136">Rock</font>  ·  <font color="B7B7CE">Steel</font></h5>
+				  	<h6 class="card-text">#380</h6>
+				    <h5 class="card-title"><font color="blue">Latias</font></h5>
+				    <h5 class="card-text"><font color="6F35FC">Dragon</font>  ·  <font color="F95587">Psychic</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/volcarona.png" class="card-img-top" alt="Pokemon 5">
+				  <img src="https://img.pokemondb.net/sprites/bank/normal/pupitar.png" class="card-img-top" alt="Pokemon 5">
 				  <div class="card-body">
-				  	<h6 class="card-text">#637</h6>
-				    <h5 class="card-title"><font color="blue">Volcarona</font></h5>
-				    <h5 class="card-text"><font color="A6B91A">Bug</font>  ·  <font color="EE8130">Fire</font></h5>
+				  	<h6 class="card-text">#247</h6>
+				    <h5 class="card-title"><font color="blue">Pupitar</font></h5>
+				    <h5 class="card-text"><font color="B6A136">Rock</font>  ·  <font color="E2BF65">Ground</font></h5>
 				  </div>
 				</div>
 			</div>
 			<div class="col-xl-4 col-lg-4 col-md-6 col-12 mt-4">
 				<div class="card" style="width: 80%;">
-				  <img src="https://img.pokemondb.net/sprites/sword-shield/pixel/eternatus.png" class="card-img-top" alt="Pokemon 6">
+				  <img src="https://img.pokemondb.net/sprites/sword-shield/normal/urshifu.png" class="card-img-top" alt="Pokemon 6">
 				  <div class="card-body">
-				  	<h6 class="card-text">#890</h6>
-				    <h5 class="card-title"><font color="blue">Eternatus</font></h5>
-				    <h5 class="card-text"><font color="A33EA1">Poison</font>  ·  <font color="6F35FC">Dragon</font></h5>
+				  	<h6 class="card-text">#892</h6>
+				    <h5 class="card-title"><font color="blue">Urshifu</font></h5>
+				    <h5 class="card-text"><font color="C22E28">Fighting</font>  ·  <font color="705746">Dark</font></h5>
 				  </div>
 				</div>
 			</div>
